workspace = { members = [
    "src/abc323",
    "src/abc324",
    "src/abc325",
    "src/abc327",
    "src/abc328",
    "src/abc329",
    "src/tessoku-book",
    "src/atc001",
    "src/abc326",
    "src/abc330",
    "src/abc331",
    "src/abc349",
    "src/abc291",
    "src/abc292",
    "src/abc293", "src/abc294", "src/abc350", "src/abc297",
], exclude = [
] }
[package]
name = "kyopro"
version = "0.1.0"
authors = ["sayoi341 <me@sayoi341.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6.5"
