workspace = { members = [
    "src/abc323",
    "src/abc324",
    "src/abc325",
    "src/abc327",
    "src/abc328",
    "src/abc329",
    "src/tessoku-book",
    "src/atc001",
    "src/abc326",
    "src/abc330",
    "src/abc331",
    "src/abc349",
    "src/abc291",
    "src/abc292",
    "src/abc293",
    "src/abc294",
    "src/abc350",
    "src/abc297",
    "src/abc299",
    "src/abc300",
    "src/abc351",
    "src/abc302",
    "src/abc352",
    "src/apg4b",
    "src/abc303",
    "src/abc305",
    "src/abc309",
    "src/abc310",
    "src/abc311",
    "src/abc312",
    "src/abc353", "src/abc354",
], exclude = [
] }
[package]
name = "kyopro"
version = "0.1.0"
authors = ["sayoi341 <me@sayoi341.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6.5"
