workspace = { members = [
    "src/abc291",
    "src/abc292",
    "src/abc293",
    "src/abc294",
    "src/abc297",
    "src/abc299",
    "src/abc300",
    "src/abc302",
    "src/abc303",
    "src/abc305",
    "src/abc309",
    "src/abc310",
    "src/abc311",
    "src/abc312",
    "src/abc313",
    "src/abc314",
    "src/abc315",
    "src/abc317",
    "src/abc318",
    "src/abc319",
    "src/abc320",
    "src/abc321",
    "src/abc322",
    "src/abc323",
    "src/abc324",
    "src/abc325",
    "src/abc326",
    "src/abc327",
    "src/abc328",
    "src/abc329",
    "src/abc330",
    "src/abc331",
    "src/abc332",
    "src/abc333",
    "src/abc334",
    "src/abc335",
    "src/abc336",
    "src/abc337",
    "src/abc338",
    "src/abc340",
    "src/abc341",
    "src/abc342",
    "src/abc343",
    "src/abc344",
    "src/abc345",
    "src/abc346",
    "src/abc347",
    "src/abc348",
    "src/abc349",
    "src/abc350",
    "src/abc351",
    "src/abc352",
    "src/abc353",
    "src/abc354",
    "src/abc355",
    "src/abc356",
    "src/abc357",
    "src/abc358",
    "src/abc359",
    "src/abc360",
    "src/apg4b",
    "src/atc001",
    "src/tessoku-book",
    "src/typical90",
], exclude = [
] }

[package]
    authors = ["sayoi341 <me@sayoi341.moe>"]
    edition = "2018"
    name    = "kyopro"
    version = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    cargo-snippet = "0.6.5"
