[package]
name = "abc303"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc303-a = { alias = "a", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_a" }
abc303-b = { alias = "b", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_b" }
abc303-c = { alias = "c", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_c" }
abc303-d = { alias = "d", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_d" }
abc303-e = { alias = "e", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_e" }
abc303-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_h" }
abc303-f = { alias = "f", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_f" }
abc303-g = { alias = "g", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_g" }

[[bin]]
name = "abc303-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc303-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc303-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc303-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc303-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc303-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc303-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc303-g"
path = "src/bin/g.rs"

[dependencies]
ac-library-rs = "=0.1.1"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = "=0.4.5"
text_io = "=0.1.12"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[dev-dependencies]
