[package]
name = "abc337"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc337-a = { alias = "a", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_a" }
abc337-b = { alias = "b", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_b" }
abc337-c = { alias = "c", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_c" }
abc337-d = { alias = "d", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_d" }
abc337-e = { alias = "e", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_e" }
abc337-f = { alias = "f", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_f" }
abc337-g = { alias = "g", problem = "https://atcoder.jp/contests/abc337/tasks/abc337_g" }

[[bin]]
name = "abc337-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc337-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc337-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc337-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc337-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc337-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc337-g"
path = "src/bin/g.rs"

[dependencies]
ac-library-rs = "=0.1.1"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = "=0.4.5"
text_io = "=0.1.12"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[dev-dependencies]
