[package]
  edition = "2018"
  name    = "abc340"
  version = "0.1.0"

[package.metadata.cargo-compete.bin]
  abc340-a = { alias = "a", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_a" }
  abc340-b = { alias = "b", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_b" }
  abc340-c = { alias = "c", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_c" }
  abc340-d = { alias = "d", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_d" }
  abc340-e = { alias = "e", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_e" }
  abc340-f = { alias = "f", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_f" }
  abc340-g = { alias = "g", problem = "https://atcoder.jp/contests/abc340/tasks/abc340_g" }

[[bin]]
  name = "abc340-a"
  path = "src/bin/a.rs"

[[bin]]
  name = "abc340-b"
  path = "src/bin/b.rs"

[[bin]]
  name = "abc340-c"
  path = "src/bin/c.rs"

[[bin]]
  name = "abc340-d"
  path = "src/bin/d.rs"

[[bin]]
  name = "abc340-e"
  path = "src/bin/e.rs"

[[bin]]
  name = "abc340-f"
  path = "src/bin/f.rs"

[[bin]]
  name = "abc340-g"
  path = "src/bin/g.rs"

[dependencies]
  ac-library-rs = "=0.1.1"
  alga          = "=0.9.3"
  ascii         = "=1.1.0"
  bitset-fixed  = "=0.1.0"
  either        = "=1.8.1"
  fixedbitset   = "=0.4.2"
  getrandom     = "=0.2.10"
  im-rc         = "=15.1.0"
  indexmap      = "=2.0.0"
  itertools     = "=0.11.0"
  itertools-num = "=0.1.3"
  lazy_static   = "=1.4.0"
  libm          = "=0.2.7"
  maplit        = "=1.0.2"
  memoise       = "=0.3.2"
  nalgebra      = "=0.32.3"
  ndarray       = "=0.15.6"
  num           = "=0.4.1"
  num-bigint    = "=0.4.3"
  num-complex   = "=0.4.3"
  num-derive    = "=0.4.0"
  num-integer   = "=0.1.45"
  num-iter      = "=0.1.43"
  num-rational  = "=0.4.1"
  num-traits    = "=0.2.15"
  ordered-float = "=3.7.0"
  permutohedron = "=0.2.4"
  petgraph      = "=0.6.3"
  proconio      = "=0.4.5"
  rand          = "=0.8.5"
  rand_chacha   = "=0.3.1"
  rand_core     = "=0.6.4"
  rand_distr    = "=0.4.3"
  rand_hc       = "=0.3.2"
  rand_pcg      = "=0.3.1"
  regex         = "=1.9.1"
  rustc-hash    = "=1.1.0"
  smallvec      = "=1.11.0"
  superslice    = "=1.0.0"
  text_io       = "=0.1.12"
  whiteread     = "=0.5.0"

[dev-dependencies]
